openafs (1.3.87-2) unstable; urgency=low

  * Improve the documentation and scripts for setting up new servers or a
    new cell.  afs-rootvol can now be run from a client configured to use
    dynroot.  afs-newcell generates the server CellServDB directly to work
    around oddities with bos addhost.  Thanks to Fahemm Mitha and Sergio
    Gelato for analysis and patches.  (Closes: #322638)
  * Detect AFS caches on non-ext2/ext3 file systems and abort AFS client
    initialization.  (Closes: #249315)
  * Don't create the unused /etc/openafs/AFSLog file.  (Closes: #120097)
  * Redo how library object files are found for the PAM module build to
    avoid assuming C locale character set behavior.  (Closes: #323582)
  * Remove the openafs-client warning against dynroot for the first system
    in a cell now that afs-rootvol can cope.  Provide some basic
    documentation of the CellAlias syntax in that message until we have a
    real man page.
  * Suggest openafs-doc.
  * Translation updates.
    - Czech, thanks Martin Sin.
    - Vietnamese, thanks Clytie Siddall.

 --

openafs (1.3.87-1) unstable; urgency=low

  * New upstream version.
    - Fixes build problems with 2.6.12.3 and later.  (Closes: #320099)
  * Add support for ppc64, thanks Andreas Jochens.  (Closes: #322020)
  * Improve the openafs-client init script.
    - Update the default client options based on the cache tuning synopsis
      by Jeffrey Hutzelman, including setting a larger chunksize for all
      default option sets.  (Closes: #303944)
    - Choose the client options based on the cache size by default.
    - Move the code to build the options string to the init script from
      afs.conf so that afs.conf is pure configuration.
    - Add an AFS_PRE_SHUTDOWN hook called before shutting down the client.
    - Provide a shutdown hook, disabled by default, that kills all
      processes with files open in /afs.  Enabling this ensures a more