@@ -89,46 +89,6 @@ handled more consistently.
  	*fbsd*| *nbsd*) \
  		$(CC) $(LDFLAGS) -o $@ afs_setcred_krb.o \
  			afs_auth_krb.o afs_util_krb.o $(SHOBJS) $(KLIBS) ;;\
-@@ -110,7 +126,13 @@
- 	${INSTALL} $? $@
- 
- ${DEST}/lib/pam_afs.krb.so.1: pam_afs.krb.so.1
--	${INSTALL} $? $@
-+	set -x; \
-+	case "$(SYS_NAME)" in \
-+	parisc*_linux*) \
-+		echo Skipping install of $@. ;; \
-+	*) \
-+		${INSTALL} $? $@ ;; \
-+	esac
- 
- afs_pam_msg.o: afs_pam_msg.c afs_pam_msg.h afs_message.h
- afs_message.o: afs_message.c afs_message.h
-@@ -130,10 +152,22 @@
- 	${INSTALL} $? $@
- 
- ${DESTDIR}${libdir}/pam_afs.krb.so.1: pam_afs.krb.so.1
--	${INSTALL} $? $@
-+	set -x; \
-+	case "$(SYS_NAME)" in \
-+	parisc*_linux*) \
-+		echo Skipping install of $@. ;; \
-+	*) \
-+		${INSTALL} $? $@ ;; \
-+	esac
- 
- ${TOP_LIBDIR}/pam_afs.krb.so.1: pam_afs.krb.so.1
--	${INSTALL} $? $@
-+	set -x; \
-+	case "$(SYS_NAME)" in \
-+	parisc*_linux*) \
-+		echo Skipping install of $@. ;; \
-+	*) \
-+		${INSTALL} $? $@ ;; \
-+	esac
- 
- dest:  ${DEST}/lib/pam_afs.so.1 ${DEST}/lib/pam_afs.krb.so.1
- 
 --- openafs-1.3.87.orig/src/pam/afs_setcred.c
 +++ openafs-1.3.87/src/pam/afs_setcred.c
 @@ -52,7 +52,7 @@
